@@ -1,3 +1,15 @@
+2011-02-25  Lukasz Slachciak  <l.slachciak@samsung.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [EFL] Added EWebLauncher command line option to turn on/off frame flattening
+        https://bugs.webkit.org/show_bug.cgi?id=54809
+
+        * EWebLauncher/main.c: Handling -f option added.
+        (on_key_down):
+        (browserCreate):
+        (main):
+
 2011-02-25  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r79324.
